--- a/package.json
+++ b/package.json
@@ -1,16 +1,31 @@
 {
-  "dependencies": {
-    "lodash": "^4.17.21",
-    "normalize.css": "^8.0.1"
-  },
-  "name": "travel-site",
-  "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": ""
+ "name": "travel-site",
+ "version": "1.0.0",
+ "scripts": {
+  "dev": "webpack serve",
+  "watch": "gulp watch"
+ },
+ "dependencies": {
+  "jquery": "^3.7.1",
+  "jquery-smooth-scroll": "2.2.0",
+  "lazysizes": "^5.3.2",
+  "normalize.css": "7.0.0",
+  "picturefill": "3.0.2",
+  "waypoints": "4.0.1"
+ },
+ "devDependencies": {
+  "autoprefixer": "^7.1.6",
+  "browser-sync": "^2.29.3",
+  "css-loader": "^6.8.1",
+  "del": "3.0.0",
+  "postcss-hexrgba": "^2.1.0",
+  "postcss-import": "^15.1.0",
+  "postcss-loader": "^7.3.3",
+  "postcss-mixins": "^6.2.3",
+  "postcss-nested": "^6.0.1",
+  "postcss-simple-vars": "^7.0.1",
+  "style-loader": "^3.3.3",
+  "webpack-cli": "^5.1.4",
+  "webpack-dev-server": "^4.15.1"
+ }
 }
