Completed reveal on scroll behavior

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "jquery": "^3.7.1",
     "jquery-smooth-scroll": "2.2.0",
     "lazysizes": "^5.3.2",
+    "lodash": "^4.17.21",
     "normalize.css": "7.0.0",
     "picturefill": "3.0.2",
     "waypoints": "4.0.1"
@@ -27,6 +28,5 @@
     "style-loader": "^3.3.3",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
-   
   }
 }
