--- a/package.json
+++ b/package.json
@@ -3,30 +3,33 @@
   "version": "1.0.0",
   "scripts": {
     "dev": "webpack serve",
+    "build": "webpack",
     "watch": "gulp watch"
   },
   "dependencies": {
-    "jquery": "^3.7.1",
-    "jquery-smooth-scroll": "2.2.0",
-    "lazysizes": "^5.3.2",
+    "css-minimizer-webpack-plugin": "^4.2.2",
     "lodash": "^4.17.21",
-    "normalize.css": "7.0.0",
-    "picturefill": "3.0.2",
-    "waypoints": "4.0.1"
+    "postcss-nested": "^6.0.0",
+    "postcss-preset-env": "^8.0.1",
+    "postcss-simple-vars": "^7.0.1"
   },
   "devDependencies": {
-    "autoprefixer": "^7.1.6",
-    "browser-sync": "^2.29.3",
-    "css-loader": "^6.8.1",
-    "del": "3.0.0",
+    "@babel/core": "^7.21.0",
+    "@babel/preset-env": "^7.20.2",
+    "babel-loader": "^9.1.2",
+    "css-loader": "^6.7.3",
+    "fs-extra": "^11.2.0",
+    "html-webpack-plugin": "^5.5.0",
+    "mini-css-extract-plugin": "^2.7.2",
+    "normalize": "^0.3.1",
+    "normalize.css": "^8.0.1",
+    "postcss": "^8.4.21",
     "postcss-hexrgba": "^2.1.0",
     "postcss-import": "^15.1.0",
-    "postcss-loader": "^7.3.3",
-    "postcss-mixins": "^6.2.3",
-    "postcss-nested": "^6.0.1",
-    "postcss-simple-vars": "^7.0.1",
-    "style-loader": "^3.3.3",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.1"
+    "postcss-loader": "^7.0.2",
+    "postcss-mixins": "^9.0.4",
+    "style-loader": "^3.3.1",
+    "webpack-cli": "^5.0.1",
+    "webpack-dev-server": "^4.11.1"
   }
 }
